[package]
name = "rust_runner"
version = "0.1.0"
edition = "2021"

[dependencies]
reth-db = { git = "https://github.com/BigBenlau/reth_ben", rev = "e96ebcd8", package = "reth-db"}
reth-provider = { git = "https://github.com/BigBenlau/reth_ben", rev = "e96ebcd8", package = "reth-provider"}
reth-chainspec = { git = "https://github.com/BigBenlau/reth_ben", rev = "e96ebcd8", package = "reth-chainspec"}
reth-primitives = { git = "https://github.com/BigBenlau/reth_ben", rev = "e96ebcd8", package = "reth-primitives"}
reth-revm = { git = "https://github.com/BigBenlau/reth_ben", rev = "e96ebcd8", package = "reth-revm"}
reth-evm-ethereum = { git = "https://github.com/BigBenlau/reth_ben", rev = "e96ebcd8", package = "reth-evm-ethereum"}
reth-evm = { git = "https://github.com/BigBenlau/reth_ben", rev = "e96ebcd8", package = "reth-evm"}
reth-blockchain-tree = { git = "https://github.com/BigBenlau/reth_ben", rev = "e96ebcd8", package = "reth-blockchain-tree"}
reth-beacon-consensus =  { git = "https://github.com/BigBenlau/reth_ben", rev = "e96ebcd8", package = "reth-beacon-consensus"}
reth-consensus = { git = "https://github.com/BigBenlau/reth_ben", rev = "e96ebcd8", package = "reth-consensus"}

revm-interpreter = { git = "https://github.com/BigBenlau/reth_ben", rev = "e96ebcd8", package = "revm-interpreter"}

tracing = "0.1.0"
tracing-appender = "0.2"
chrono = "0.4.34"
csv = "1.3.0"
